<resources>
    <string name="app_name">Homework_v2</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="main_screen">Главный экран</string>
    <string name="info">О приложении</string>
    <string name="add_film2">Добавить фильм</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>

    <string name="signature">App created by me</string>

    <string name="action_share">Share</string>
    <string name="add_film">Add film</string>

    <string name="family">Для всей семьи</string>
    <string name="friends">С друзьями</string>
    <string name="eighteen">18+</string>
    <string name="Kids">Для детей</string>

    <string name="name_film">Название фильма</string>
    <string name="descr_film">Описание фильма</string>

    <string name="comment_field">Комментарий</string>
    <string name="CheckBox_detail">Нравится</string>

    <string name="main">Главная</string>
    <string name="favourite">Избранное</string>
    <string name="add">Добавить свой</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>